tests-system/type-qualifiers-2/output
type T4 extends T3 {
     ^^ type-qualifiers-2/foo.rsl:15: issue: consider clarifying that this record is final [clarify_final]
      | Parent record Foo.T3 is final, making this record
      | also final. Marking it explicitly as final
      | clarifies this to casual readers.
T1 test_1 {
^^ type-qualifiers-2/foo.trlc:3: error: cannot declare object of abstract record type T1
Processed 1 model, 0 checks and 1 requirement file and found 1 warning and 1 error
